--- a/login.html
+++ b/login.html
@@ -3,11 +3,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    .title-header {
+            text-align: center;
+            font-size: 40px;
+            font-weight: bold;
+        }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
+    <div class="title-header">Academic Event Management Company</div>
 </head>
 <body>
     <div class="login-container">
