--- a/registration.html
+++ b/registration.html
@@ -43,6 +43,12 @@
                 <label for="phone">Phone Number:</label>
                 <input type="text" id="phone" name="phone">
             </div>
+            <div class="form-group">
+                <label for="checkbox">
+                    Register As Admin?
+                    <input type="checkbox" id="adminCheckbox" name="adminCheckbox">
+                </label>
+            </div>
 
             <button type="submit">Register</button>
         </form>
